--- a/app/app.csproj
+++ b/app/app.csproj
@@ -4,6 +4,10 @@
     <TargetFramework>netcoreapp3.1</TargetFramework>
   </PropertyGroup>
 
+  <ItemGroup>
+    <PackageReference Include="prometheus-net.AspNetCore" Version="3.5.0" />
+  </ItemGroup>
+
 
 
 </Project>
